# ncity-chat-fullstack

./: docker-compose.yaml
backend/: Cargo.toml  Dockerfile  docker-compose.yaml
backend/.sqlx/: query-00720673c6b212f76954dd71223f2756aef04f427b9990262ce705c8631b2763.json  query-2fc499c6861ecbcd709a7a477f82293f201ddd9ee4b24030e8080571a853f5b1.json  query-93cc1e062590a28482c542ad0cc761428ba3772d81ba202561a790d2049025ed.json  query-ab8da658f46feef16c1579a262cee37299566ca3c08429b1f4e20971c2a5d406.json  query-aed3f7c3988a2bd2de16563a29bb142135889db735d3dc44a3d5dec93f9a03ab.json  query-e44b395c6daa272f59a24342762c26c4c4953d66ceae43499c60b560c2391167.json
backend/src/: adapters.rs  application.rs  config.toml  infrastructure.rs  lib.rs  main.rs  utils.rs
backend/src/adapters/: api.rs  crypto.rs  ctx.rs
backend/src/adapters/api/: app_state.rs  chat.rs  errors.rs  middlewares.rs  user.rs
backend/src/adapters/api/chat/: chat_controller.rs  chat_presenter.rs
backend/src/adapters/api/login/: login_controller.rs
backend/src/adapters/api/user/: user_controller.rs  user_payload.rs  user_presenters.rs
backend/src/adapters/crypto/: argon.rs  errors.rs  token.rs
backend/src/adapters/db/: postgres.rs
backend/src/application/: errors.rs  repositories.rs  use_cases.rs
backend/src/application/dto/: user.rs
backend/src/application/repositories/: chat.rs  hash.rs  user.rs
backend/src/domain/: entities.rs
backend/src/domain/entities/: chat.rs  errors.rs  user.rs
backend/src/infrastructure/: app.rs  config.rs  db.rs
backend/src/utils/: b64.rs  errors.rs  time.rs
(+19 files in other folders)
