[package]
name = "ncity-chat-network"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8"
base64-url = "3.0.2"
chrono = "0.4.43"
config = { version = "0.15.19", features = ["json", "toml", "yaml"] }
dotenvy = "0.15.7"
envy = "0.4.2"
jsonwebtoken = "10.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-cookies = "0.11.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "serde"] }

[target.'cfg(debug_assertions)'.dependencies]
axum-macros = "0.5.0"
